modificaciones para que funcione con el oversound_auth como dios manda
